--- a/app/src/main/res/layout/item_monthly_activity_categories.xml
+++ b/app/src/main/res/layout/item_monthly_activity_categories.xml
@@ -29,12 +29,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="2dp"
         android:layout_marginEnd="12dp"
         android:lines="1"
         android:text="Title"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/budgetProgressBar"
         app:layout_constraintEnd_toStartOf="@+id/budgetAmountTextView"
         app:layout_constraintStart_toEndOf="@+id/budgetLogoImageView"
         app:layout_constraintTop_toTopOf="@id/budgetLogoImageView" />
@@ -58,6 +58,7 @@
         android:layout_height="wrap_content"
         android:max="100"
         android:progress="40"
+        app:layout_constraintBottom_toBottomOf="@id/budgetLogoImageView"
         app:layout_constraintEnd_toStartOf="@+id/budgetSubtitleTextView"
         app:layout_constraintStart_toStartOf="@+id/budgetNameTextView"
         app:layout_constraintTop_toBottomOf="@+id/budgetNameTextView" />
@@ -82,6 +83,7 @@
         android:layout_marginStart="12dp"
         android:text="Subtitle"
         android:textAlignment="viewEnd"
+        app:layout_constraintBottom_toBottomOf="@+id/budgetProgressBar"
         app:layout_constraintEnd_toEndOf="@+id/budgetAmountTextView"
         app:layout_constraintStart_toEndOf="@+id/budgetProgressBar"
         app:layout_constraintTop_toBottomOf="@+id/budgetAmountTextView" />
