--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -29,13 +29,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="2dp"
         android:layout_marginEnd="12dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="Title"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/transactionSubtitleTextView"
         app:layout_constraintEnd_toStartOf="@+id/transactionAmountTextView"
         app:layout_constraintStart_toEndOf="@id/transactionLogoImageView"
         app:layout_constraintTop_toTopOf="@+id/transactionLogoImageView" />
@@ -47,6 +47,7 @@
         android:text="Subtitle"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@android:color/tertiary_text_light"
+        app:layout_constraintBottom_toBottomOf="@id/transactionLogoImageView"
         app:layout_constraintEnd_toEndOf="@+id/transactionTitleTextView"
         app:layout_constraintStart_toStartOf="@+id/transactionTitleTextView"
         app:layout_constraintTop_toBottomOf="@+id/transactionTitleTextView" />
