--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
         android:id="@+id/mainSignUpButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:insetTop="@dimen/inset_top"
         android:insetBottom="@dimen/inset_bottom"
         android:text="Sign Up"
@@ -60,16 +60,19 @@
         android:textColor="@color/textColor"
         android:textSize="@dimen/text_size"
         app:cornerRadius="@dimen/button_corner_radius"
-        app:layout_constraintBottom_toTopOf="@+id/mainLogInTextView"
+        app:layout_constraintBottom_toTopOf="@+id/mainLogInButton"
         app:layout_constraintEnd_toEndOf="@+id/text_welcome_caption"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/text_welcome_caption" />
 
-    <TextView
-        android:id="@+id/mainLogInTextView"
+    <Button
+        android:id="@+id/mainLogInButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="8dp"
+        android:background="@android:color/transparent"
+        android:insetTop="@dimen/inset_top"
+        android:insetBottom="@dimen/inset_bottom"
         android:text="Log In"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
