--- a/app/src/main/res/layout/fragment_transaction_item_detail.xml
+++ b/app/src/main/res/layout/fragment_transaction_item_detail.xml
@@ -2,6 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     android:id="@+id/transactionDetailNestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -158,7 +159,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:context=".MapsActivity" />
+                    tools:context=".MapsActivity"
+                    map:cameraZoom="15"/>
 
                 <FrameLayout
                     android:id="@+id/transactionDetailAddressFrameLayout"
